# lcard_oscilloscope

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.c54c0a6  README.md  lqmeasstudio.desktop.in
arch/: PKGBUILD.in
debian/: README  changelog  changelog.in  control  control.in  copyright  copyright.in  menu  rules
icons/: icons.qrc
lib/QLedIndicator/: QLedIndicator.cpp  QLedIndicator.h
lib/QTableViewHelpers/: TableParameter.h  TableParamsModelHelper.h  TableParamsModelIface.h  TableViewSettings.cpp  TableViewSettings.h  qtableviewhelpers.cmake
lib/QTableViewHelpers/actions/: TableCopyAction.cpp  TableCopyAction.h
lib/QTableViewHelpers/delegates/: BoolBoxEditorDelegate.cpp  BoolBoxEditorDelegate.h  CheckBoxItemDelegate.cpp  CheckBoxItemDelegate.h  ComboBoxEditorDelegate.cpp  ComboBoxEditorDelegate.h  DelegateIndexSelector.h  DoubleSpinBoxDelegate.cpp  DoubleSpinBoxDelegate.h
lib/QtDevIfaceConfigDialog/: ConfigPasswordDialog.cpp  ConfigPasswordDialog.h  ConfigPasswordDialog.ui  DevIfaceConfigDialog.cpp  DevIfaceConfigDialog.h  DevIfaceConfigDialog.ui  QtDevIfaceConfigDialog.cmake  SvcInstanceNameValidator.cpp  SvcInstanceNameValidator.h  qtdevifaceconfigdialog_ru.ts
lib/QtLbootDialog/: LbootDialog.cpp  LbootDialog.h  LbootDialog.ui  LbootOutRecord.cpp  LbootOutRecord.h  QtLbootDialog.cmake  qtlbootdialog_ru.ts
lib/lmath/: CMakeLists.txt  lmath.c  lmath.def  lmath.h
lib/lmath/arch/: PKGBUILD.in
lib/lmath/cmake/Modules/: FindFFTW3.cmake  FindX502API.cmake
lib/lmath/debian/: control.in  liblmath1.install
lib/lmath/rpm/: lmath.spec.in
lib/lqmeas/: EnumNamedValue.h  Error.h  StdErrors.h  lqmeas.cmake  lqmeas_config.h.in  lqmeas_ru.ts  lqtdefs.h  vptr.h
lib/lqmeas/cmake/Modules/: FindLTRAPI.cmake  FindX502API.cmake
lib/lqmeas/devs/: Device.cpp  Device.h  DeviceConfig.cpp  DeviceConfig.h  DeviceFrameReceiver.h  DeviceFrameSender.h  DeviceInfo.h  DeviceNameValidator.h  DeviceRef.cpp  DeviceRef.h  DeviceTypeInfo.cpp  DeviceTypeInfo.h  DeviceValidator.h
lib/lqmeas/devs/LTR/: LTRModuleRef.cpp  LTRModuleRef.h  LTRResolver.cpp  LTRResolver.h
lib/lqmeas/devs/LTR/crates/: LTRCrate.cpp  LTRCrate.h  LTRCrateInfo.h  LTRCrateTypeInfo.cpp  LTRCrateTypeInfo.h
lib/lqmeas/devs/LTR/modules/: LTRMezzanine.h  LTRModule.cpp  LTRModule.h  ltr210.cpp  ltr210.h  ltr25.cpp  ltr25.h  ltr35.cpp  ltr35.h  ltr51.cpp  ltr51.h
lib/lqmeas/devs/LTR/modules/LTR11/: LTR11.cpp  LTR11.h  LTR11Config.cpp  LTR11Config.h  LTR11Info.h  LTR11TypeInfo.cpp  LTR11TypeInfo.h
lib/lqmeas/devs/gpib/: Agilent3458.cpp  Agilent3458.h  gpibResolver.cpp  gpibResolver.h
lib/lqmeas/devs/lcomp/: lcompDevice.cpp  lcompDevice.h  lcompErrors.h  lcompRecvProcessorIface.h  lcompResolver.cpp  lcompResolver.h  lcompSeqAdcConfig.cpp  lcompSeqAdcConfig.h  lcompStreamDevice.cpp  lcompStreamDevice.h  lcompStreamReceiver.cpp  lcompStreamReceiver.h  lcomp_headers.h
lib/lqmeas/devs/lcomp/modules/: e2010.cpp  e2010.h
lib/lqmeas/devs/resolver/: DeviceNetworkBrowser.cpp  DeviceNetworkBrowser.h  DeviceSvcRecord.h  DevicesResolver.cpp  DevicesResolver.h  DevicesResolverIpAddr.h
lib/lqmeas/devs/x502/: e502NetBrowser.cpp  e502NetBrowser.h  e502SvcRecord.cpp  e502SvcRecord.h  x502.cpp  x502.h  x502Config.cpp  x502Config.h  x502Info.h  x502Resolver.cpp  x502Resolver.h  x502TypeInfo.cpp  x502TypeInfo.h
lib/lqmeas/gui/LtrModuleSelection/: LtrModuleSelection.cpp  LtrModuleSelection.h
lib/lqmeas/ifaces/in/: DevAdc.cpp  DevAdc.h  DevAdcConfig.cpp  DevAdcConfig.h  DevAdcInfo.h  DevAdcStdSeq32Config.cpp  DevAdcStdSeq32Config.h  DevInAsyncDig.cpp  DevInAsyncDig.h
lib/lqmeas/log/: Log.cpp  Log.h  LogLevel.h  LogMessage.h  LogModel.cpp  LogModel.h  LogPanel.cpp  LogPanel.h
lib/lqmeas/services/MultimeterThread/: MultimeterProcessor.cpp  MultimeterProcessor.h  MultimeterThread.cpp  MultimeterThread.h
lib/lqmeas/units/: Unit.h  Units.cpp  Units.h
rpm/: lqmeasstudio.spec.in
src/: ChannelSignalParamPanel.cpp  ChannelSignalParamPanel.h  DataBlock.h  DataBlockProcessPlugin.h  FreqConfigWidget.cpp  FreqConfigWidget.h  LQMeasStudio.cpp  LQMeasStudio.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OptionalFileSelection.cpp  OptionalFileSelection.h  ProcessPlugin.cpp  ProcessPlugin.h  QHexSpinBox.cpp  QHexSpinBox.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  WaitDialog.cpp  WaitDialog.h  WaitDialog.ui  config.h.in  main.cpp
src/devs/: DeviceTree.cpp  DeviceTree.h
src/devs/IpAddrConfig/: IpAddrAddDialog.cpp  IpAddrAddDialog.h  IpAddrAddDialog.ui  IpAddrConfig.cpp  IpAddrConfig.h  IpAddrConfigDialog.cpp  IpAddrConfigDialog.h  IpAddrConfigDialog.ui
src/devs/NetworkDevicesBrowser/: NetworkBrowserDialog.cpp  NetworkBrowserDialog.h  NetworkBrowserDialog.ui  NetworkBrowserModel.cpp  NetworkBrowserModel.h
src/devs/plugins/: LQDevPlugin.cpp  LQDevPlugin.h  devplugins.cmake
src/devs/plugins/lcomp/: CMakeLists.txt  lcompDevPlugin.cpp  lcompDevPlugin.h  lcompDevSeqAdcCfgDialog.cpp  lcompDevSeqAdcCfgDialog.h  lcompDevSeqAdcCfgDialog.ui
src/devs/plugins/ltr/: CMakeLists.txt  LtrDevPlugin.cpp  LtrDevPlugin.h
src/devs/plugins/x502/: BlackfinFirmwareSelection.cpp  BlackfinFirmwareSelection.h  CMakeLists.txt  ComboBoxNoWheel.cpp  ComboBoxNoWheel.h  SpinBoxNoWheel.cpp  SpinBoxNoWheel.h  X502AsyncIoDialog.cpp  X502AsyncIoDialog.h  X502AsyncIoDialog.ui  X502ConfigDialog.cpp  X502ConfigDialog.h  X502ConfigDialog.ui  X502DevPlugin.cpp  X502DevPlugin.h
src/in/: AdcReceiver.cpp  AdcReceiver.h  ChannelInfo.cpp  ChannelInfo.h  InDataChannelsConfig.cpp  InDataChannelsConfig.h  InReceiveLauncher.cpp  InReceiveLauncher.h
src/plot/: BlockTimeGraphPlugin.cpp  BlockTimeGraphPlugin.h  LQMeasStudioPlot.cpp  LQMeasStudioPlot.h  PlotConfigDialog.cpp  PlotConfigDialog.h  PlotConfigDialog.ui  SpectrumGraphPlugin.cpp  SpectrumGraphPlugin.h  qcustomplot.cpp
src/proc/: ACDCEstimatePlugin.cpp  ACDCEstimatePlugin.h  AdcBlockReceivePlugin.cpp  AdcBlockReceivePlugin.h  AdcBlockReceiver.cpp  AdcBlockReceiver.h  SpectrumPlugin.cpp  SpectrumPlugin.h
translations/: lqmeasstudio_ru.ts
(+26 files in other folders)
